# allthingsida

./: .gitignore  .gitmodules  LICENSE  README.md  idainfo.py
ctfs/: README.md
ctfs/blizzard_lich_king/: README.md
ctfs/catbert_flareon11/: .gitignore  README.md
ctfs/catbert_flareon11/angr/: CMakeLists.txt  driver.c  tbl1.c  tbl2.c  vm.asm
ctfs/catbert_flareon11/ctf_files/: README.md  run.bat
ctfs/catbert_flareon11/cuda/: CMakeLists.txt  brute_force_adler32_2.cu
ctfs/catbert_flareon11/disasm/: CMakeLists.txt  bc3-gen.py  disasm.py  vmspecs.py
ctfs/catbert_flareon11/disasm/bytecodes/: bc1.asm  bc1.i64  bc2.asm  bc2.i64  bc3.asm  bc3.i64  bc4.asm  bc4.i64
ctfs/catbert_flareon11/files/: DilbootApp.efi  DilbootApp.efi.enc  catmeme1.jpg.c4tb  catmeme2.jpg.c4tb  catmeme3.jpg.c4tb  your_mind.jpg.c4tb
ctfs/catbert_flareon11/idb/: DilbootApp.efi.i64  crc32_appcall.i64
ctfs/catbert_flareon11/klee/: bc1-klee.cpp  bc2-klee.cpp  bc3-klee.cpp  defs.h
ctfs/catbert_flareon11/src/: CMakeLists.txt  all_test.cpp  bc2.cpp  bc3-gen.cpp  bc3.cpp  bc4-print.cpp  bc4.cpp  main.cpp  utils_impl.cpp  vm.cpp  vm.h
ctfs/free_madame_de_maintenon/: README.md  challenge.i64  solution.py
ctfs/mdm_crypto_pursuit/: CMakeLists.txt  README.md  ctfsrc.cpp  dialog.md  madame.i64  tables_impl.cpp  z3-1.py
ctfs/mdm_crypto_pursuit/.temp/: CMakeLists.txt  cryptest.c  notes.md  pseudo.cpp  src.c
ctfs/mdm_enigmatic_bouillotte_game/: README.md  frida.js  mdmebg-solved.c  mdmebg-solved.i64
ctfs/y0da_flareon10/: CMakeLists.txt  README.md  base32.py  main.cpp  rop-chain.i64  sticher.py  y0da-new.i64
decompiler/: README.md
decompiler/ctree_visitor/: CMakeLists.txt  README.md  ctree_visitor.py  driver.cpp  idasdk.h  main.cpp  qctree_visitor.py  qctree_visitor.py.deps.qscripts
deobfuscation/: README.md
deobfuscation/VMProtect-Imports/: 0000 Imports.py  0005 Objects and classes.py  0010 Collect modules.py  0020 Find obfuscated calls.py  0021 Display potential calls.py  0029 Suppress exceptions.py  0030 Resolve obfuscated API calls.py  0031 Display results.py  0032 Pickle results.py  0040 Resolve API names.py  0041 Display APIs.py  0050 Show trace.py  0051 Display APIs.py  0052 Display results [trace].py  0060 Compute IAT table.py  0061 Rename IAT pointers.py  0062 Test Patch call sites.py  0070 Patch call sites.py  README.md
file-formats/: README.md
file-formats/pe-file/: README.md  common.py  detect_eat_hooks.py  list-exports.py  list-imports.py  list_entrypoints.py  list_exports.py  list_imports.py  list_relocs.py  reloc_snippet.c
file-formats/pe-file/.qscripts/: list_relocs.py.deps.qscripts
files/: README.md
gpts/: LICENSE  README.md
gpts/idapython/: gpt-idapython.md
gpts/idasdk/: gpt-idasdk_cpp.md
gpts/plugins/: gpt-ida_plugins_repo.md
malware/: README.md
malware/01-lighty/: README.md  compute_hashes.py  lighty_compressor.i64
os/: README.md
os/win/: peb_teb32.h  peb_teb64.h
os/win/ldr_data_table_entry/: ininit.py  inmemory.py  loadorder.py
plugins/: README.md
plugins/eject_idb/: CMakeLists.txt  README.md  eject.cpp  eject_idb.cpp  eject_plugin.cpp  main.cpp  prep-cmake.bat  utils.hpp  windowthreadhotkey.cpp  windowthreadhotkey.h
plugins/util_hotkeys/: README.md  util_hotkeys.py
presentations/: README.md
sdk/: README.md
sdk/actions-and-handlers/: CMakeLists.txt  actions.cpp  actions.py
sdk/python_ext/: CMakeLists.txt  README.md  extension.cpp  extension.h  idasdk.h  mymodule.py  plugin.cpp
snippets/: idainfo.py  show_all_icons.py
using_ida/: README.md
using_ida/multiarch/: MultiArch.i64  MultiArch.py  README.md
